--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,17 @@
 version: '2'
 
 services:
-  server:
-    build:
+#   server:
+#     build:
+#       context: .
+#       dockerfile: server/Dockerfile
+#     ports:
+#       - 8181:8181
+  client:
+    build: 
       context: .
-      dockerfile: server/Dockerfile
+      dockerfile: client/Dockerfile
     ports:
-      - 8181:8181
-  # client:
-  #   build: 
-  #     context: .
-  #     dockerfile: client/Dockerfile
-  #   ports:
-  #     - 80:80
-  #   volumes:
-  #     - ./client/:/usr/share/nginx/html
+      - 80:80
+    volumes:
+      - ./client/:/usr/share/nginx/html
