--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,13 @@
 version: '2'
 
 services:
-#   server:
-#     build:
-#       context: .
-#       dockerfile: server/Dockerfile
-#     ports:
-#       - 8181:8181
+  server:
+    build:
+      dockerfile: server/Dockerfile
+    ports:
+      - 8181:8181
   client:
     build: 
-      context: .
       dockerfile: client/Dockerfile
     ports:
       - 80:80
