--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,7 @@
 version: '2'
 
 services:
+  # Config do server
   server:
     build:
       context: server/
@@ -9,6 +10,7 @@ services:
       - 8181:8181
     volumes:
       - ./server/server.js:/usr/src/app/server.js
+  # Config do client
   client:
     build: 
       dockerfile: Dockerfile
